WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217748
[WinCairo][GraphicsLayerTextureMapper] A parent layer's filter isn't applied to its child layer at the first paint
https://bugs.webkit.org/show_bug.cgi?id=217748
Summary
[WinCairo][GraphicsLayerTextureMapper] A parent layer's filter isn't applied ...
Fujii Hironori
Reported
2020-10-14 23:02:48 PDT
Created
attachment 411409
[details]
test case [WinCairo][GraphicsLayerTextureMapper] A parent layer's filter isn't applied to its child layer
Attachments
test case
(409 bytes, text/html)
2020-10-14 23:02 PDT
,
Fujii Hironori
no flags
Details
[Screenshot] WinCairo port
(45.66 KB, image/png)
2020-10-14 23:03 PDT
,
Fujii Hironori
no flags
Details
Patch
(1.68 KB, patch)
2020-10-14 23:44 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-10-14 23:03:55 PDT
Created
attachment 411410
[details]
[Screenshot] WinCairo port
Fujii Hironori
Comment 2
2020-10-14 23:04:50 PDT
This rendering issue can be fixed by resizing the browser window.
Fujii Hironori
Comment 3
2020-10-14 23:44:00 PDT
Created
attachment 411411
[details]
Patch
Fujii Hironori
Comment 4
2020-10-15 00:17:00 PDT
The code was added by
r156710
.
Bug 122159
– [TexMap] CSS filter not working on software composited layers
Fujii Hironori
Comment 5
2020-10-15 12:48:20 PDT
Comment on
attachment 411411
[details]
Patch Clearing flags on attachment: 411411 Committed
r268546
: <
https://trac.webkit.org/changeset/268546
>
Fujii Hironori
Comment 6
2020-10-15 12:48:23 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-10-15 12:49:32 PDT
<
rdar://problem/70348166
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug