[WinCairo][GraphicsLayerTextureMapper] A parent layer's filter isn't applied to its child layer at the first paint https://bugs.webkit.org/show_bug.cgi?id=217748

Reviewed by Don Olmstead.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::setFilters): Removed
unnecessary checking of m_layer.textureMapper().

Canonical link: https://commits.webkit.org/230509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268546 268f45cc-cd09-0410-ab3c-d52691b4dbfc